# fstrk-pdf-checkout

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  customer.json  detect_image_size.py  heroku.yml  main.py  order-1c.html  products.json  pyproject.toml  render.sh  renderer.py  shure.json
templates/: order-1c.html  sample_payload.html
